--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rank-learning",
+  "name": "cslr",
   "version": "0.1.0",
   "description": "",
   "directories": {
@@ -9,11 +9,10 @@
     "chai": "~1.9.0",
     "gulp": "~3.5.2",
     "gulp-coffee": "~1.4.1",
-    "gulp-concat": "~2.1.7",
     "gulp-notify": "~0.6.2",
     "gulp-uglify": "~0.2.1",
     "gulp-util": "~2.2.14",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
   },
   "devDependencies": {
     "gulp-mocha": "~0.4.1",
@@ -29,6 +28,6 @@
   "author": "Rolf Erik Lekang",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/relekang/rank-learning/issues"
+    "url": "https://github.com/relekang/cslr/issues"
   }
 }
