--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-notify": "~0.6.2",
     "gulp-uglify": "~0.2.1",
     "gulp-util": "~2.2.14",
-    "coffee-script": "~1.7.1",
+    "coffee-script": "~1.7.1"
   },
   "devDependencies": {
     "gulp-mocha": "~0.4.1",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/relekang/rank-learning.git"
+    "url": "git://github.com/relekang/cslr.git"
   },
   "author": "Rolf Erik Lekang",
   "license": "MIT",
